--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-family: 'Josefin Sans', sans-serif;
+    /*   background-color: #2b2c2c;
+    color: #e0a80d; */
+}
+
+.ng-valid[required],
+.ng-valid.required {
+    border-left: 5px solid #42A948;
+    /* green */
+}
+
+.ng-invalid:not(form) {
+    border-left: 5px solid #ff0400;
+    /* red */
+}
+
+.card {
+    margin-top: 20px;
+}
+
+.fa-solid {
+    padding: auto;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+#edition {
+    vertical-align: middle;
+    float: right;
+}
