--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,10 +5,10 @@
     <div class="card-text" *ngFor="let portfolio of portfolioList" class="card">
         <p>{{portfolio.about_me}}</p>
     </div>
-    <!--
+
     <div *ngIf="isLogged">
-        <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+        <a href="#"></a>
         <a href="#"><i class="fa-solid fa-eraser"></i></a>
     </div>
-    -->
+
 </div>
