--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,27 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2b2c2c;">
     <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navArgPrograma" aria-controls="navArgPrograma" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="col-sm-2">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navArgPrograma" aria-controls="navArgPrograma" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="assets/APLogo.png" class="img-fluid" width="50px"></a>
-        <div class="collapse navbar-collapse" id="navArgPrograma">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-right">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <fa-icon [icon]="iconGitHub"></fa-icon>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a routerLinkActive="active" class="nav-link" routerLink="auth/login" *ngIf="isLogged; else loggedOut">
-                        <fa-icon [icon]="iconLogin " aria-label="Login " aria-expanded="Login ">Login</fa-icon>
-
-                    </a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="#"><img src="assets/APLogo.png" class="img-fluid" width="50px"></a>
+        </div>
+        <div class="col-md-8 text-center" *ngIf="isLogged">
+            Logged as: {{this.nombreUsuario}}
+        </div>
+        <div class="col-sm-2">
+            <div class="collapse navbar-collapse" id="navArgPrograma">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">
+                            <fa-icon [icon]="iconGitHub"></fa-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a routerLinkActive="active" class="nav-link" routerLink="auth/login" *ngIf="!isLogged">
+                            <fa-icon [icon]="iconLogin " aria-label="Login " aria-expanded="Login "></fa-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item" *ngIf="isLogged" (click)="onLogOut()">
+                        <a class="nav-link" style="cursor: pointer;">
+                            <fa-icon [icon]="salir" aria-label="Logout" aria-expanded="Logout"></fa-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
-
+<!--
 <ng-template #loggedOut>
     <section class="vh-100">
         <div class="container-fluid h-custom">
@@ -54,3 +65,4 @@
         </div>
     </section>
 </ng-template>
+-->
