--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,14 +1,17 @@
-<div class="card-body row">
-    <h5 class="card-title">
-        About Me
-    </h5>
-    <div class="card-text" *ngFor="let portfolio of portfolioList" class="card">
-        <p>{{portfolio.about_me}}</p>
-    </div>
+<section class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h3 class="text-left fw-bolder">
+                About Me
+            </h3>
+        </div>
+        <div class="card-text" *ngFor="let portfolio of portfolioList">
+            <p>{{portfolio.about_me}}</p>
+        </div>
 
-    <div *ngIf="isLogged">
-        <a href="#"></a>
-        <a href="#"><i class="fa-solid fa-eraser"></i></a>
-    </div>
+        <div *ngIf="isLogged">
+            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+            <a href="#"><i class="fa-solid fa-eraser"></i></a>
+        </div>
 
-</div>
+    </div>
