--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-<!-- <div class="mt-5 p-4 bg-dark text-white text-center"> -->
-<div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+<div class="mt-5 p-4 bg-dark text-white text-center">
     <footer>
         <p>©Copyright 2022. Todos los derechos reservados.</p>
     </footer>
