--- a/src/app/security/auth/login/login.component.html
+++ b/src/app/security/auth/login/login.component.html
@@ -1,36 +1,40 @@
-<div class="text-center" *ngIf="isLogged; else loggedOut">
-    <h2>Ya has iniciado sesión</h2>
-</div>
+<section class="vh-100">
+    <div class="text-center" *ngIf="isLogged; else loggedOut">
+        <h2>Ya has iniciado sesión</h2>
+    </div>
 
-<ng-template #loggedOut>
-    <div class="container d-flex justify-content-center">
-        <div class="card">
-            <div class="card-header">
-                <h2>Login</h2>
-            </div>
-            <div class="card-body">
-                <form #loginForm="ngForm" (ngSubmit)="onLogin()" novalidate>
-                    <div class="form-group">
-                        <label for="nombreUsuario">Username</label>
-                        <input type="text" name="nombreUsuario" id="nombreUsuario" class="form-control" [(ngModel)]="nombreUsuario" required="true" autocomplete>
-                    </div>
-                    <div class="form-group">
-                        <label for="nombreUsuario">Password</label>
-                        <input type="password" name="password" id="password" class="form-control" [(ngModel)]="password" required="true" autocomplete>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn outline success btn-block" [disabled]="!loginForm.valid">Login</button>
-                    </div>
+    <ng-template #loggedOut>
+        <div class="container d-flex justify-content-center">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Login</h2>
+                </div>
+                <div class="card-body">
+                    <form #loginForm="ngForm" (ngSubmit)="onLogin()" novalidate>
+                        <div class="form-group">
+                            <label for="nombreUsuario">Username</label>
+                            <input type="text" name="nombreUsuario" id="nombreUsuario" class="form-control" [(ngModel)]="nombreUsuario" required="true" autocomplete>
+                        </div>
+                        <div class="form-group">
+                            <label for="nombreUsuario">Password</label>
+                            <input type="password" name="password" id="password" class="form-control" [(ngModel)]="password" required="true" autocomplete>
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-outline-success btn" [disabled]="!loginForm.valid">Login</button>
+                            </div>
+                        </div>
 
-                    <div *ngIf="loginForm.submitted && isLoginFail" class="alert alert-danger mt-3">
-                        No se pudieron comprobar los datos.
-                    </div>
-                </form>
+                        <div *ngIf="loginForm.submitted && isLoginFail" class="alert alert-danger mt-3">
+                            No se pudieron comprobar los datos.
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</ng-template>
-
+    </ng-template>
+</section>
 
 
 <!--ng-template #loggedOut>
