Add route to new project

--- a/src/app/components/projects/list-projects/list-projects.component.html
+++ b/src/app/components/projects/list-projects/list-projects.component.html
@@ -11,7 +11,7 @@
     <div class="row container">
         <div class="col-sm-3" *ngFor="let project of projects">
             <div class="card">
-                <img src="https://via.placeholder.com/150?Text=Project Image" class="card-img-top" alt="{{project.project_name}}">
+                <img src="https://via.placeholder.com/90x90" class="card-img-top" alt="{{project.project_name}}">
                 <div class="card-body">
                     <h5 class="card-title">{{project.project_name}}</h5>
                     <p class="card-text">{{project.project_description}}</p>
