Add new Project

--- a/src/app/components/projects/list-projects/list-projects.component.html
+++ b/src/app/components/projects/list-projects/list-projects.component.html
@@ -4,7 +4,7 @@
             <h3 class="text-left fw-bolder">Projects</h3>
         </div>
         <div class="col-sm-3" *ngIf="isAdmin">
-            <button class="btn btn-outline-success btn-md" routerLink="/nuevo">
+            <button class="btn btn-outline-success btn-md" routerLink="/projects/new">
             <i class="fa-regular fa-plus"></i> New Project</button>
         </div>
     </div>
