--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,11 @@
-<p>skills works!</p>
+<section class="container">
+    <div class="row">
+        <div class="col-sm-9">
+            <h3 class="text-left fw-bolder">Skills</h3>
+        </div>
+    </div>
+    <!--div class="row" *ngFor="let skills of portfolio"-->
+    <div>
+        My Skills
+    </div>
+</section>
