--- a/src/app/components/studies/studies.component.html
+++ b/src/app/components/studies/studies.component.html
@@ -1,1 +1,7 @@
-<p>studies works!</p>
+<section class="container">
+    <div class="row">
+        <div class="col-sm-9">
+            <h3 class="text-left fw-bolder">Studies</h3>
+        </div>
+    </div>
+</section>
