--- a/src/app/components/projects/new-projects/new-projects.component.html
+++ b/src/app/components/projects/new-projects/new-projects.component.html
@@ -1,1 +1,37 @@
-<p>new works!</p>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-4 mx-auto">
+            <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+                <div class="form-group">
+                    <label for="nombre">Project Name:</label>
+                    <input type="text" class="form-control" id="project_name" name="project_name" [(ngModel)]="project_name" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Project Description:</label>
+                    <input type="text" class="form-control" id="project_description" name="project_description" [(ngModel)]="project_description" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Project date:</label>
+                    <input type="text" class="form-control" id="project_start" name="project_start" [(ngModel)]="project_start" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Project Tools:</label>
+                    <input type="text" class="form-control" id="project_tools" name="project_tools" [(ngModel)]="project_tools" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Project image:</label>
+                    <input type="text" class="form-control" id="project_start" name="project_start" [(ngModel)]="project_start" required>
+                </div>
+                <div class="form-group">
+                    <label for="nombre">Website:</label>
+                    <input type="text" class="form-control" id="project_url" name="project_url" [(ngModel)]="project_tools" required>
+                </div>
+
+                <button class="btn btn-outline-success btn-block " [disabled]="!f.valid ">
+                    <i class="fas fa-plus-circle "></i> Crear</button>
+                <button class="btn btn-outline-primary btn-block " routerLink="/lista ">
+                    <i class="fas fa-arrow-alt-circle-left "></i> Volver</button>
+            </form>
+        </div>
+    </div>
+</div>
