--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,7 +11,8 @@
         </div>
     </div>
     <div id="edition">
-        <img id="user" src="assets/user.png" class="rounded-circle">
+        <img src="https://i.ibb.co/nfQCx46/IMG-20211215-233715912.jpg" id="user" class="rounded-circle" alt="user" border="0">
+
         <a href="#" class="useredit" *ngIf="!isLogged">
             <i class="fa-solid fa-pen-to-square"></i>
         </a>
