--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,3 +1,7 @@
+h3 {
+    margin: 2.5rem;
+}
+
 #user {
     width: 10%;
     margin-left: 10%;
@@ -20,9 +24,6 @@
         color: #e0a80d;
     }
 }
-
-
-/* On screens that are 600px or less, set the background color to olive */
 
 @media screen and (max-width: 600px) {
     #user {
