--- a/src/app/security/index/index.component.html
+++ b/src/app/security/index/index.component.html
@@ -3,5 +3,6 @@
 <app-about></app-about>
 <app-studies></app-studies>
 <app-skills></app-skills>
-<app-list-projects></app-list-projects>
+
+<!--app-list-projects></app-list-projects-->
 <app-footer></app-footer>
