--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,18 @@
 html,
 body {
     height: 100%;
-    margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     background-color: #2b2c2c;
     color: #e0a80d;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 20px;
 }
 
 fa-icon {
