--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div class="mt-5 p-4 bg-dark text-white text-center">
     <footer>
-        <p>©Copyright 2022. Todos los derechos reservados.</p>
+        <p>©Copyright 2022. All rights reserved.</p>
+        <p>The logos used are property of their respective owners.</p>
     </footer>
 </div>
