--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -4,7 +4,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navArgPrograma" aria-controls="navArgPrograma" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-            <a class="navbar-brand" href="#"><img src="assets/APLogo.png" class="img-fluid" width="50px"></a>
+            <a class="navbar-brand" href="#"><img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1653341386/APLogo-20-20.png" class="img-fluid"></a>
         </div>
         <div class="col-md-8 text-center" *ngIf="isLogged">
             Logged as: {{this.nombreUsuario}}
