--- a/src/app/components/about/update-person/update-person.component.html
+++ b/src/app/components/about/update-person/update-person.component.html
@@ -1,6 +1,4 @@
-<p>update-person works!</p>
-<!--div *ngIf="person"-->
-<div>
+<div *ngIf="person">
     <h3 class="text-center">Update Personal Data</h3>
     <div class="container">
         <div class="row mt-5">
