--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,27 +1,25 @@
-<div class="card">
-    <div class="card-body d-none d-lg-block">
-        <img src="assets/banner2.png" width="100%" class="header">
-        <div id="edition" *ngIf="!isLogged">
-            <a href="#" id="banneredit" class="banner edit">
-                <i class="fa-solid fa-pen-to-square"></i>
-            </a>
-            <a href="#" id="banneredit" class="">
-                <i class="fa-solid fa-eraser"></i>
-            </a>
+<section class="container">
+    <div class="">
+        <div class="d-none d-lg-block">
+            <img src="assets/banner2.png" width="100%" class="header">
+            <div id="edition" *ngIf="!isLogged">
+                <a href="#" id="banneredit" class="banner edit">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                </a>
+                <a href="#" id="banneredit" class="">
+                    <i class="fa-solid fa-eraser"></i>
+                </a>
+            </div>
+        </div>
+
+        <div id="profile" *ngFor="let portfolio of portfolioList">
+            <img src="{{ portfolio.profile_img }}" id="user" class="rounded-circle" alt="user" border="1">
+
+            <div id="profile_data">
+                <p> {{ portfolio.firstname }} {{ portfolio.lastname }}</p>
+                <p> {{ portfolio.title }} </p>
+                <p> {{ portfolio.location }}</p>
+            </div>
         </div>
     </div>
-    <div id="edition">
-        <img src="https://i.ibb.co/nfQCx46/IMG-20211215-233715912.jpg" id="user" class="rounded-circle" alt="user" border="0">
-
-        <a href="#" class="useredit" *ngIf="!isLogged">
-            <i class="fa-solid fa-pen-to-square"></i>
-        </a>
-        <section class="container">
-            <div id="personalData" *ngFor="let portfolio of portfolioList">
-                <p> {{portfolio.firstname}} {{portfolio.lastname}}</p>
-                <p> {{portfolio.title_arg_programa}} </p>
-                <p> {{portfolio.ubication}}</p>
-            </div>
-        </section>
-    </div>
-</div>
+</section>
