--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     font-family: 'Josefin Sans', sans-serif;
     background-color: #2b2c2c;
-    color: #e0a80d;
+    color: #FFF;
 }
 
 h1,
@@ -43,9 +43,4 @@ fa-icon:hover {
     padding: auto;
     margin-right: 10px;
     vertical-align: middle;
-}
-
-#edition {
-    vertical-align: middle;
-    float: right;
 }
