Minimal changes in services

--- a/src/app/security/auth/login/login.component.html
+++ b/src/app/security/auth/login/login.component.html
@@ -6,7 +6,7 @@
     <ng-template #loggedOut>
         <div class="container d-flex justify-content-center">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-dark">
                     <h2>Login</h2>
                 </div>
                 <div class="card-body">
