--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -12,8 +12,8 @@ h3 {
 @media screen and (max-width: 915px) {
     img#user {
         width: 15%;
-        margin-left: 42%;
-        margin-top: 2%;
+        margin-left: 0%;
+        margin-top: -4%;
         border: 35px;
     }
     div#personalData {
@@ -21,7 +21,7 @@ h3 {
     }
     div#edition {
         background-color: #2b2c2c;
-        color: #e0a80d;
+        color: #e00d0d;
     }
 }
 
