Minor changes in component Login

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -43,4 +43,8 @@ round-progress {
         margin: 0 auto 50px;
         padding: 25px;
     }
+    #skills {
+        margin-top: -100%;
+        margin-left: 38%;
+    }
 }
