--- a/src/app/security/auth/login/login.component.html
+++ b/src/app/security/auth/login/login.component.html
@@ -6,8 +6,9 @@
     <ng-template #loggedOut>
         <div class="container d-flex justify-content-center">
             <div class="card">
-                <div class="card-header text-dark">
-                    <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1653341386/APLogo-20-20.png" class="img-fluid">
+                <div class="card-header text-dark bg-dark">
+                    <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1653341386/APLogo-20-20.png" style=" display: block;
+                    margin: 0px auto;" class="img-fluid mb-3" width="20%">
                 </div>
                 <div class="card-header text-dark">
                     <h2>Login</h2>
