--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -17,7 +17,7 @@
 
             <div class="card-body text-center ">
                 <div class="text-vertical ">
-                    <h6 class="card-title "> {{ skill.skills_name }} </h6>
+                    <h6 class="card-title" id="skills"> {{ skill.skills_name }} </h6>
                 </div>
             </div>
             <div class="text-center " *ngIf="isAdmin ">
