--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,50 +1,79 @@
-.cf:after {
-    clear: both;
-}
-
-.text-vertical {
-    margin-top: -40%;
-}
-
-.progress-wrapper {
-    position: relative;
-    margin: 20px auto;
-    font-size: 20px;
-}
-
-.current {
-    position: relative;
-    color: #bbb;
-    font-weight: 100;
-    line-height: 1;
-}
-
-round-progress {
-    margin: auto;
-}
-
-@media (max-width: 650px) {
-    .back {
-        position: static;
-        display: block;
-        text-align: center;
+    .cf:after {
+        clear: both;
     }
-    h2,
-    .back {
-        margin-bottom: 20px;
+    
+    .text-vertical {
+        margin-top: -40%;
     }
-    input,
-    select {
-        width: 100%;
-        margin-top: 5px;
-        float: none;
+    
+    .progress-wrapper {
+        position: relative;
+        margin: 20px auto;
+        font-size: 20px;
     }
-    .container {
-        margin: 0 auto 50px;
-        padding: 25px;
+    
+    .current {
+        position: relative;
+        color: #bbb;
+        font-weight: 100;
+        line-height: 1;
     }
-    #skills {
-        margin-top: -100%;
-        margin-left: 38%;
+    
+    round-progress {
+        margin: auto;
     }
-}
+    
+    @media (max-width: 650px) {
+        .back {
+            position: static;
+            display: block;
+            text-align: center;
+        }
+        h2,
+        .back {
+            margin-bottom: 20px;
+        }
+        input,
+        select {
+            width: 100%;
+            margin-top: 5px;
+            float: none;
+        }
+        .container {
+            margin: 0 auto 50px;
+            padding: 25px;
+        }
+        #skills {
+            margin-top: -100%;
+            margin-left: 38%;
+        }
+    }
+    
+    @media screen and (max-width: 915px) {
+        #skills {
+            margin-top: -50%;
+            margin-left: 12%;
+        }
+    }
+    
+    @media (max-width: 650px) {
+        .back {
+            position: static;
+            display: block;
+            text-align: center;
+        }
+        h2,
+        .back {
+            margin-bottom: 20px;
+        }
+        input,
+        select {
+            width: 100%;
+            margin-top: 5px;
+            float: none;
+        }
+        .container {
+            margin: 0 auto 50px;
+            padding: 25px;
+        }
+    }
