Minor change in skill & navigation

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -13,7 +13,12 @@
             <div class="collapse navbar-collapse" id="navArgPrograma">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="https://ar.linkedin.com/in/pablo-guinazu" class="nav-link">
+                            <fa-icon [icon]="iconLinkedIn"></fa-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://github.com/pitux" class="nav-link">
                             <fa-icon [icon]="iconGitHub"></fa-icon>
                         </a>
                     </li>
