modified jobs service

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -13,7 +13,7 @@
     <div class="row container card-group bg-transparent ">
         <div class="col-sm-4 progress-wrapper mb-4 " *ngFor="let skill of skills ">
 
-            <round-progress [current]="skill.skills_domain " [max]="max " [rounded]="true " [radius]="80" [responsive]="false" [color]="'#9d9d95'"></round-progress>
+            <round-progress [current]="skill.skills_domain " [max]="max " [rounded]="true " [radius]="80" [responsive]="false" [color]="'#6c757d'"></round-progress>
 
             <div class="card-body text-center ">
                 <div class="text-vertical ">
